# Projector_interaction

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml  requirements.txt  run_wall_touch_demo.sh  wall_touch_ambient_effects.py  wall_touch_connect_four.py  wall_touch_core.py  wall_touch_effects.py  wall_touch_games.py  wall_touch_orbbec.py  wall_touch_orbit_keeper.py  wall_touch_paint.py
.github/workflows/: ci.yml
docs/: hardware-setup.md
scripts/: download_hand_model.sh  install_orbbec_udev.sh  render_mode_previews.py
tests/: test_ambient_effects.py  test_camera.py  test_connect_four.py  test_core.py  test_effects.py  test_games.py  test_orbbec.py  test_orbit_keeper.py
