[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wall-touch-demo"
version = "2.6.0"
description = "Projector wall interaction using one calibrated external RGB camera"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mediapipe==0.10.35",
  "numpy==2.2.6",
  "opencv-contrib-python==5.0.0.93",
]

[project.scripts]
wall-touch-demo = "wall_touch_paint:main"

[tool.setuptools]
py-modules = [
  "wall_touch_ambient_effects",
  "wall_touch_core",
  "wall_touch_effects",
  "wall_touch_paint",
]
