[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wall-touch-demo"
version = "3.5.0"
description = "Projector wall interaction using calibrated Orbbec RGB-D or external RGB cameras"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mediapipe==0.10.35",
  "numpy==2.2.6",
  "opencv-contrib-python==5.0.0.93",
  "pyorbbecsdk2==2.1.1",
]

[project.scripts]
wall-touch-demo = "wall_touch_paint:main"

[tool.setuptools]
py-modules = [
  "wall_touch_ambient_effects",
  "wall_touch_connect_four",
  "wall_touch_core",
  "wall_touch_effects",
  "wall_touch_games",
  "wall_touch_orbit_keeper",
  "wall_touch_paint",
  "wall_touch_orbbec",
]
